Increase height to prevent iframe overflow in credit card screen

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -37,7 +37,7 @@ general styles
 .views-container {
     margin: auto;
     max-width: 440px;
-    max-height: 590px;
+    max-height: 595px;
     height: 100%;
     width: 100%;
 }
